[package]
name = "chip8emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
gccjit = { version = "1.0.0", path = "../gccjit.rs" }
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["full"] }
wgpu = "0.15.1"
winit = "0.28.2"
